plugins/binding/capi/include/TellusimCAPI.h

typedef struct TSCommand_t *TSCommand;
/// Tellusim::Format
typedef enum TS_Format {
	TS_FormatUnknown = 0,
	TS_FormatRi8,
	TS_FormatRu8,
	TS_FormatRi8n,
	TS_FormatRu8n,
	TS_FormatRGi8,
	TS_FormatRGu8,
	TS_FormatRGi8n,
	TS_FormatRGu8n,
	TS_FormatRGBi8,
	TS_FormatRGBu8,
	TS_FormatRGBi8n,
	TS_FormatRGBu8n,
	TS_FormatRGBu8ns,
	TS_FormatRGBAi8,
	TS_FormatRGBAu8,
	TS_FormatRGBAi8n,
	TS_FormatRGBAu8n,
	TS_FormatRGBAu8ns,
	TS_FormatBGRAu8n,
	TS_FormatBGRAu8ns,
	TS_FormatRi16,
	TS_FormatRu16,
	TS_FormatRi16n,
	TS_FormatRu16n,
	TS_FormatRf16,
	TS_FormatRGi16,
	TS_FormatRGu16,
	TS_FormatRGi16n,
	TS_FormatRGu16n,
	TS_FormatRGf16,
	TS_FormatRGBi16,
	TS_FormatRGBu16,
	TS_FormatRGBi16n,
	TS_FormatRGBu16n,
	TS_FormatRGBf16,
	TS_FormatRGBAi16,
	TS_FormatRGBAu16,
	TS_FormatRGBAi16n,
	TS_FormatRGBAu16n,
	TS_FormatRGBAf16,
	TS_FormatRi32,
	TS_FormatRu32,
	TS_FormatRf32,
	TS_FormatRGi32,
	TS_FormatRGu32,
	TS_FormatRGf32,
	TS_FormatRGBi32,
	TS_FormatRGBu32,
	TS_FormatRGBf32,
	TS_FormatRGBAi32,
	TS_FormatRGBAu32,
	TS_FormatRGBAf32,
	TS_FormatRi64,
	TS_FormatRu64,
	TS_FormatRf64,
	TS_FormatRGi64,
	TS_FormatRGu64,
	TS_FormatRGf64,
	TS_FormatRGBi64,
	TS_FormatRGBu64,
	TS_FormatRGBf64,
	TS_FormatRGBAi64,
	TS_FormatRGBAu64,
	TS_FormatRGBAf64,
	TS_FormatRGBAu4n,
	TS_FormatRGBu5Au1n,
	TS_FormatRu5Gu6Bu5n,
	TS_FormatRGBu10Au2,
	TS_FormatRGBu10Au2n,
	TS_FormatRGf11Bf10,
	TS_FormatRGBf9Eu5,
	TS_FormatRGBf21,
	TS_FormatBC1RGBu8n,
	TS_FormatBC1RGBu8ns,
	TS_FormatBC1RGBAu8n,
	TS_FormatBC1RGBAu8ns,
	TS_FormatBC2RGBAu8n,
	TS_FormatBC2RGBAu8ns,
	TS_FormatBC3RGBAu8n,
	TS_FormatBC3RGBAu8ns,
	TS_FormatBC4Ri8n,
	TS_FormatBC4Ru8n,
	TS_FormatBC5RGi8n,
	TS_FormatBC5RGu8n,
	TS_FormatBC6RGBf16s,
	TS_FormatBC6RGBf16u,
	TS_FormatBC7RGBAu8n,
	TS_FormatBC7RGBAu8ns,
	TS_FormatEACRi8n,
	TS_FormatEACRu8n,
	TS_FormatEACRGi8n,
	TS_FormatEACRGu8n,
	TS_FormatETC2RGBu8n,
	TS_FormatETC2RGBu8ns,
	TS_FormatETC2RGBAu8n,
	TS_FormatETC2RGBAu8ns,
	TS_FormatETC2RGBu8Au1n,
	TS_FormatETC2RGBu8Au1ns,
	TS_FormatASTC44RGBAu8n,
	TS_FormatASTC44RGBAu8ns,
	TS_FormatASTC44RGBAf16,
	TS_FormatASTC54RGBAu8n,
	TS_FormatASTC54RGBAu8ns,
	TS_FormatASTC54RGBAf16,
	TS_FormatASTC55RGBAu8n,
	TS_FormatASTC55RGBAu8ns,
	TS_FormatASTC55RGBAf16,
	TS_FormatASTC65RGBAu8n,
	TS_FormatASTC65RGBAu8ns,
	TS_FormatASTC65RGBAf16,
	TS_FormatASTC66RGBAu8n,
	TS_FormatASTC66RGBAu8ns,
	TS_FormatASTC66RGBAf16,
	TS_FormatASTC85RGBAu8n,
	TS_FormatASTC85RGBAu8ns,
	TS_FormatASTC85RGBAf16,
	TS_FormatASTC86RGBAu8n,
	TS_FormatASTC86RGBAu8ns,
	TS_FormatASTC86RGBAf16,
	TS_FormatASTC88RGBAu8n,
	TS_FormatASTC88RGBAu8ns,
	TS_FormatASTC88RGBAf16,
	TS_FormatDu16,
	TS_FormatDu16Su8,
	TS_FormatDu24,
	TS_FormatDu24Su8,
	TS_FormatDf32,
	TS_FormatDf32Su8,
	TS_FormatNumFormats,
	TS_Format_Maxi32 = 0x7fffffff,
} TS_Format;
TS_CAPI void* TS_CCALL tsCommand_getUniformData(TSCommand self, uint32_t index, size_t size);
TS_CAPI void TS_CCALL tsCommand_setUniformData(TSCommand self, uint32_t index, const void *src, size_t size);
TS_CAPI void* TS_CCALL tsCommand_getStorageData(TSCommand self, uint32_t index, size_t size);
TS_CAPI void TS_CCALL tsCommand_setStorageData(TSCommand self, uint32_t index, const void *src, size_t size);
TS_CAPI void* TS_CCALL tsCommand_getVertexData(TSCommand self, uint32_t index, size_t size);
TS_CAPI void TS_CCALL tsCommand_setVertexData(TSCommand self, uint32_t index, const void *src, size_t size);
TS_CAPI void* TS_CCALL tsCommand_getIndexData(TSCommand self, TS_Format format, size_t size);
TS_CAPI void TS_CCALL tsCommand_setIndexData(TSCommand self, TS_Format format, const void *src, size_t size);
TS_CAPI void* TS_CCALL tsCommand_getIndirectData(TSCommand self, size_t size);
TS_CAPI void TS_CCALL tsCommand_setIndirectData(TSCommand self, const void *src, size_t size);