plugins/binding/csharp/source/TellusimCSBase.cs

		
		public float radius;
		public float length;
		public Vector2f center;
		public Vector2f axis;
		public Color color_0;
		public Color color_1;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct CanvasVertex {
		public Vector3f position;
		public Vector2f texcoord;
		public uint color;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct CanvasShapeVertex {
		public Vector4f position;
		public Vector4f parameters;
		public Vector2f texcoord;
		public Vector2u padding;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct CanvasStripVertex {
		public Vector4f position;
		public Vector4f parameters;
		public Vector4f adjacencies;
	}
	
	/*****************************************************************************\
	 *
	 * Platform
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Origin {
		
		public Origin(uint x, uint y, uint z = 0) { this.x = x; this.y = y; this.z = z; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", x, y, z); }
		
		public uint x;
		public uint y;
		public uint z;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct Size {
		
		public Size(uint width, uint height, uint depth = 1) { this.width = width; this.height = height; this.depth = depth; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", width, height, depth); }
		
		public uint width;
		public uint height;
		public uint depth;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct Region {
		
		public Region(uint x, uint y, uint width, uint height) { this.x = x; this.y = y; z = 0; this.width = width; this.height = height; depth = 1; }
		public Region(uint x, uint y, uint z, uint width, uint height, uint depth) { this.x = x; this.y = y; this.z = z; this.width = width; this.height = height; this.depth = depth; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2}) - ({3} {4} {5})", x, y, z, width, height, depth); }
		
		public uint x;
		public uint y;
		public uint z;
		public uint width;
		public uint height;
		public uint depth;
	}
	
	/*
	 */
	public struct Face {
		
		public Face(uint index, uint size = 1) { this.index = index; this.size = size; }
		
		public override string ToString() { return System.String.Format("({0} {1})", index, size); }
		
		public static readonly Face zero = new Face(0);
		
		public uint index;
		public uint size;
	}
	
	public struct Layer {
		
		public Layer(uint index, uint size = 1) { this.index = index; this.size = size; }
		
		public override string ToString() { return System.String.Format("({0} {1})", index, size); }
		
		public static readonly Layer zero = new Layer(0);
		
		public uint index;
		public uint size;
	}
	
	public struct Mipmap {
		
		public Mipmap(uint index, uint size = 1) { this.index = index; this.size = size; }
		
		public override string ToString() { return System.String.Format("({0} {1})", index, size); }
		
		public static readonly Mipmap zero = new Mipmap(0);
		
		public uint index;
		public uint size;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Slice {
		
		public Slice(in Face f) { face = f.index; faces = f.size; layer = 0; layers = 1; mipmap = 0; mipmaps = 1; }
		public Slice(in Layer l) { face = 0; faces = 1; layer = l.index; layers = l.size; mipmap = 0; mipmaps = 1; }
		public Slice(in Mipmap m) { face = 0; faces = 1; layer = 0; layers = 1; mipmap = m.index; mipmaps = m.size; }
		public Slice(in Layer l, in Face f) { face = f.index; faces = f.size; layer = l.index; layers = l.size; mipmap = 0; mipmaps = 1; }
		public Slice(in Face f, in Mipmap m) { face = f.index; faces = f.size; layer = 0; layers = 1; mipmap = m.index; mipmaps = m.size; }
		public Slice(in Layer l, in Mipmap m) { face = 0; faces = 1; layer = l.index; layers = l.size; mipmap = m.index; mipmaps = m.size; }
		public Slice(in Layer l, in Face f, in Mipmap m) { face = f.index; faces = f.size; layer = l.index; layers = l.size; mipmap = m.index; mipmaps = m.size; }
		public Slice(uint face, uint layer = 0, uint mipmap = 0) { this.face = face; faces = 1; this.layer = layer; layers = 1; this.mipmap = mipmap; mipmaps = 1; }
		
		public static implicit operator Slice(in Face f) { return new Slice(f); }
		public static implicit operator Slice(in Layer l) { return new Slice(l); }
		public static implicit operator Slice(in Mipmap m) { return new Slice(m); }
		
		public override string ToString() { return System.String.Format("({0} {1}) : ({2} {3}) : ({4} {5})", face, faces, layer, layers, mipmap, mipmaps); }
		
		public static readonly Slice zero = new Slice(0, 0, 0);
		
		public uint face;
		public uint faces;
		public uint layer;
		public uint layers;
		public uint mipmap;
		public uint mipmaps;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Viewport {
		
		Viewport(float width, float height) { x = 0.0f; y = 0.0f; this.width = width; this.height = height; znear = 0.0f; zfar = 1.0f; }
		Viewport(float x, float y, float width, float height) { this.x = x; this.y = y; this.width = width; this.height = height; znear = 0.0f; zfar = 1.0f; }
		Viewport(float x, float y, float width, float height, float znear, float zfar) { this.x = x; this.y = y; this.width = width; this.height = height; this.znear = znear; this.zfar = zfar; }
		
		public float getLeft() { return x; }
		public float getBottom() { return y; }
		public float getRight() { return x + width; }
		public float getTop() { return y + height; }
		
		public override string ToString() { return System.String.Format("({0} {1}) : ({2} {3}) : ({4} {5})", x, y, width, height, znear, zfar); }
		
		public float x;
		public float y;
		public float width;
		public float height;
		public float znear;
		public float zfar;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct Scissor {
		
		Scissor(int width, int height) { x = 0; y = 0; this.width = width; this.height = height; }
		Scissor(int x, int y, int width, int height) { this.x = x; this.y = y; this.width = width; this.height = height; }
		
		public override string ToString() { return System.String.Format("({0} {1}) : ({2} {3})", x, y, width, height); }
		
		public int x;
		public int y;
		public int width;
		public int height;
	}
	
	/*
	 */
	public partial class Command {
		public void setUniform<Type>(uint index, Type data) {
			int size = Marshal.SizeOf(data);
			IntPtr ptr = tsCommand_getUniformData(self, index, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Marshal.StructureToPtr(data, ptr, false);
				tsCommand_setUniformData(self, index, ptr, (ulong)size); Marshal.FreeHGlobal(ptr);
			} else {
				Marshal.StructureToPtr(data, ptr, false);
			}
		}
		public void setUniform<Type>(uint index, Type[] data) {
			int stride = Marshal.SizeOf(data[0]), size = stride * data.Length;
			IntPtr ptr = tsCommand_getUniformData(self, index, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Base.getData(data, ptr, stride);
				tsCommand_setUniformData(self, index, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Base.getData(data, ptr, stride);
			}
		}
		public void setStorage<Type>(uint index, Type data) {
			int size = Marshal.SizeOf(data);
			IntPtr ptr = tsCommand_getStorageData(self, index, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Marshal.StructureToPtr(data, ptr, false);
				tsCommand_setStorageData(self, index, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Marshal.StructureToPtr(data, ptr, false);
			}
		}
		public void setStorage<Type>(uint index, Type[] data) {
			int stride = Marshal.SizeOf(data[0]), size = stride * data.Length;
			IntPtr ptr = tsCommand_getStorageData(self, index, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Base.getData(data, ptr, stride);
				tsCommand_setStorageData(self, index, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Base.getData(data, ptr, stride);
			}
		}
		public void setVertices<Type>(uint index, Type[] data) {
			int stride = Marshal.SizeOf(data[0]), size = stride * data.Length;
			IntPtr ptr = tsCommand_getVertexData(self, index, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Base.getData(data, ptr, stride);
				tsCommand_setVertexData(self, index, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Base.getData(data, ptr, stride);
			}
		}
		public void setIndices(short[] data) {
			int size = 2 * data.Length;
			IntPtr ptr = tsCommand_getIndexData(self, Format.Ru16, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Marshal.Copy(data, 0, ptr, data.Length);
				tsCommand_setIndexData(self, Format.Ru16, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Marshal.Copy(data, 0, ptr, data.Length);
			}
		}
		public void setIndices(int[] data) {
			int size = 4 * data.Length;
			IntPtr ptr = tsCommand_getIndexData(self, Format.Ru32, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Marshal.Copy(data, 0, ptr, data.Length);
				tsCommand_setIndexData(self, Format.Ru32, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Marshal.Copy(data, 0, ptr, data.Length);
			}
		}
		public void setIndirect<Type>(Type data) {
			int size = Marshal.SizeOf(data);
			IntPtr ptr = tsCommand_getIndirectData(self, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Marshal.StructureToPtr(data, ptr, false);
				tsCommand_setIndirectData(self, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Marshal.StructureToPtr(data, ptr, false);
			}
		}
		public void setIndirect<Type>(Type[] data) {
			int stride = Marshal.SizeOf(data[0]), size = stride * data.Length;
			IntPtr ptr = tsCommand_getIndirectData(self, (ulong)size);
			if(ptr == IntPtr.Zero) {
				ptr = Marshal.AllocHGlobal(size);
				Base.getData(data, ptr, stride);
				tsCommand_setIndirectData(self, ptr, (ulong)size);
				Marshal.FreeHGlobal(ptr);
			} else {
				Base.getData(data, ptr, stride);
			}
		}
	}
